--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prod": "node index.js"
   },
   "dependencies": {
+    "bull": "^4.8.4",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.4.1",
