--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb://localhost:27017/companydb
+MONGODB_URI=mongodb+srv://nodeuser:xoPlX58yRB1wrCSf@scrapyard.qtedw.mongodb.net/companies?retryWrites=true&w=majority
