--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon index.js",
-    "prod": "node index.js"
+    "prod": "node index.js",
+    "prod:single": "node scrap_single.js"
   },
   "dependencies": {
     "bull": "^4.8.4",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.4.1",
+    "pm2": "^5.2.0",
     "puppeteer": "^15.1.1"
   }
 }
